--- a/reports/md/RMarkdownIntro/RMarkdownIntro.Rmd
+++ b/reports/md/RMarkdownIntro/RMarkdownIntro.Rmd
@@ -7,7 +7,8 @@ opts_knit$set(root.dir='../../../')
 text.
 
 ```{r}
-source(file='data/starRmake.R')
+# source(file='data/starRmake.R')
+star <- read.csv("data/star.csv")
 library(Hmisc)
 library(psych)
 library(tables)
